--- a/angular-challenge/package.json
+++ b/angular-challenge/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@fullcalendar/angular": "^5.0.0",
+    "@fullcalendar/daygrid": "^5.0.1",
+    "@fullcalendar/interaction": "^5.0.0",
     "bootstrap": "^4.3.1",
     "firebase": "^7.15.4",
     "jquery": "^3.5.1",
