--- a/angular-challenge/package.json
+++ b/angular-challenge/package.json
@@ -24,8 +24,13 @@
     "@fullcalendar/daygrid": "^5.0.1",
     "@fullcalendar/interaction": "^5.0.0",
     "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
     "firebase": "^7.15.4",
     "jquery": "^3.5.1",
+    "ng2-charts": "^2.3.2",
+    "ng4-loading-spinner": "^1.2.3",
+    "ngb-modal": "^2.0.3",
+    "ngx-spinner": "^9.0.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
